added meta description and social media appearance

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,15 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description"
+    content="Portfolio website showcasing recent development and design projects Nneka Tielman is working on" />
+
+  <!-- Social Media appearance  -->
+  <meta property="og:title" content="Nneka Tielman's Portfolio">
+  <meta property="og:description" content="Portfolio showcasing recent projects Nneka Tielman is working on">
+  <meta property="og:image" content="%PUBLIC_URL%/assets/images/projects/devProjects/portfolio.png">
+  <meta property="og:url" content="https://ntielman.github.io/Portfolio/">
+
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
