fixed social media image url

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
   <!-- Social Media appearance  -->
   <meta property="og:title" content="Nneka Tielman's Portfolio">
   <meta property="og:description" content="Portfolio showcasing recent projects Nneka Tielman is working on">
-  <meta property="og:image" content="%PUBLIC_URL%/assets/images/projects/devProjects/portfolio.png">
+  <meta property="og:image"
+    content="https://ntielman.github.io/Portfolio/assets/images/projects/devProjects/portfolio.png">
   <meta property="og:url" content="https://ntielman.github.io/Portfolio/">
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
