resized portfolio image url

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
   <meta property="og:image"
     content="https://ntielman.github.io/Portfolio/assets/images/projects/devProjects/portfolio.png">
   <meta property="og:url" content="https://ntielman.github.io/Portfolio/">
+  <meta property="og:type" content="website" />
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
