--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script src="%PUBLIC_URL%/modernizr-custom.js"></script>
 </body>
 
 </html>
